# fast_farmer_config

./: .gitignore  Cargo.toml  Dockerfile  readme.md
.cargo/: config.toml
.github/workflows/: ci.yml  lint-and-build.yml  release.yml
src/: config.rs  main.rs
