[package]
name = "fast_farmer_config"
version = "0.1.0"
edition = "2021"

[[bin]]
name="ff_config"
path="src/main.rs"

[dependencies]
bip39 = {version= "2.0.0", features=["rand"] }
clap = { version = "4.5.4", features = ["derive"] }
dg_xch_cli = { version="2.0.3" }
dg_xch_clients = { version="2.0.3" }
dg_xch_core = { version="2.0.3" }
dg_xch_keys = { version="2.0.3" }
dg_xch_puzzles = { version="2.0.3" }
dialoguer = "0.11.0"
hex = "0.4.3"
home = "0.5.9"
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.4"
serde = {version="1.0.198", features = ["derive"]}
serde_yaml = "0.9.33"
simple_logger = "4.3.3"
tokio = {version = "1.37.0", features=["rt-multi-thread", "sync", "macros", "fs", "net"]}
